--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,5 +9,8 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build and test
+      id: build-image
+      env:
+        CI_VERBOSE: 1
       run: |
-      CI_VERBOSE=1 make -f Makefile.ci
+        make -f Makefile.ci
