--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,8 @@
+name: Poseidon CI
+
+# Run this workflow every time a new commit pushed to your repository
+on: push
+
 jobs:
   deploy:
     name: Deploy
