--- a/CI/Dockerfile.ci
+++ b/CI/Dockerfile.ci
@@ -31,6 +31,8 @@ RUN apt-get update                                               && \
         picolibc-arm-none-eabi                                      \
         wine                                                        \
         clang                                                    && \
+    dpkg --add-architecture i386 && apt-get update               && \
+          apt-get install wine32:i386                               \
     apt-get clean                                                && \
     rm -rf /var/lib/apt/lists/
 WORKDIR /build
