--- a/CI/Dockerfile.ci
+++ b/CI/Dockerfile.ci
@@ -32,7 +32,7 @@ RUN apt-get update                                               && \
         wine                                                        \
         clang                                                    && \
     dpkg --add-architecture i386 && apt-get update               && \
-          apt-get install wine32:i386                               \
+          apt-get install wine32:i386                            && \
     apt-get clean                                                && \
     rm -rf /var/lib/apt/lists/
 WORKDIR /build
